Fixed horizontal scrolling issue

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -133,8 +133,12 @@ margin-left: -5px;
 	margin-bottom: -5px;
 }
 
-#randompink{
+.randompink{
 	background-color: #BD0FE1;
+}
+
+.randomblue{
+	background-color: #0000FF;
 }
 
 #shorthline {
@@ -152,7 +156,7 @@ margin-left: -5px;
 }
 
 #rightcollumn {
-	min-width: 370px;
+	width: 370px;
 	white-space: nowrap;
 }
 
@@ -164,7 +168,6 @@ margin-left: -5px;
 	min-width: 1250px;
 	max-width: 1500px;
 	
-	height: 100px;
 	display: flex;
 }
 
@@ -179,7 +182,6 @@ margin-left: -5px;
 
 #mainrow {
 	overflow: auto;
-	max-height: 100px;
 }
 
 .center-inner {
